--- a/portfolio_실습1-Landing_Page.html
+++ b/portfolio_실습1-Landing_Page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,16 @@
   <link rel="stylesheet" href="./fontawesome/css/all.css">
   <title>Landing Page</title>
 </head>
+
 <body>
   <div class="container-bg">
     <div class="content ct-header">
       <div>
         <h3>Landing Page for Apps</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam minima unde officia omnis rerum cupiditate excepturi accusamus quisquam vel itaque error nisi, architecto perferendis quasi tempora autem quae ipsum placeat?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam minima unde officia omnis rerum cupiditate
+          excepturi accusamus quisquam vel itaque error nisi, architecto perferendis quasi tempora autem quae ipsum
+          placeat?
         </p>
         <button class="bnt">Show More</button>
       </div>
@@ -42,7 +46,7 @@
           <p>Lorem ipsum dolor adipisicing elit.</p>
         </div>
         <div>
-          <i class="fa-solid fa-bolt icon" ></i><br>
+          <i class="fa-solid fa-bolt icon"></i><br>
           <strong>Quickness</strong>
           <p>Lorem ipsum dolor adipisicing elit.</p>
         </div>
@@ -59,30 +63,47 @@
     </div>
     <div class="content ct-portfolio">
       <div class="img-container">
-        <div class="port-img1">
-          <div class="port-text">
-            <h2>Stationary</h2>
-            <p>Lorem ipsum dolor adipisicing elit.</p>
+
+        <div class="overlay1">
+          <div class="transition"></div>
+          <div class="port-img1 port">
+            <div class="port-text">
+              <h2>Stationary1</h2>
+              <p>Lorem ipsum dolor adipisicing elit.</p>
+            </div>
           </div>
         </div>
-        <div class="port-img2">
-          <div class="port-text">
-            <h2>Stationary</h2>
-            <p>Lorem ipsum dolor adipisicing elit.</p>
+
+        <div class="overlay2">
+          <div class="transition"></div>
+          <div class="port-img2 port">
+            <div class="port-text">
+              <h2>Stationary1</h2>
+              <p>Lorem ipsum dolor adipisicing elit.</p>
+            </div>
           </div>
         </div>
-        <div class="port-img3">
-          <div class="port-text">
-            <h2>Stationary</h2>
-            <p>Lorem ipsum dolor adipisicing elit.</p>
+
+        <div class="overlay3">
+          <div class="transition"></div>
+          <div class="port-img3 port">
+            <div class="port-text">
+              <h2>Stationary1</h2>
+              <p>Lorem ipsum dolor adipisicing elit.</p>
+            </div>
           </div>
         </div>
-        <div class="port-img4">
-          <div class="port-text">
-            <h2>Stationary</h2>
-            <p>Lorem ipsum dolor adipisicing elit.</p>
+
+        <div class="overlay4">
+          <div class="transition"></div>
+          <div class="port-img4 port">
+            <div class="port-text">
+              <h2>Stationary1</h2>
+              <p>Lorem ipsum dolor adipisicing elit.</p>
+            </div>
           </div>
         </div>
+
       </div>
     </div>
     <footer class="content logo-link ct-text">
@@ -95,4 +116,5 @@
     </footer>
   </div>
 </body>
+
 </html>
