--- a/assignment_2.html
+++ b/assignment_2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <title>Document</title>
   <style>
     .black-bg {
@@ -13,34 +14,42 @@
       background : rgba(0,0,0,0.5);
       z-index : 5;
       padding: 30px;
+      display: none;
     }
     .white-bg {
       background: white;
       border-radius: 5px;
       padding: 30px;
-      display: none;
+      width: 30%;
+      height: 10%;
+      /* display: none; */
     }
     .show{
       display: block;
     }
+
   </style>
 </head>
 <body>
   <div class="black-bg">
-    <button class="BTN">버튼</button>
     <div class="white-bg">
       <h4>로그인하세요</h4>
-      <button class="btn btn-danger" id="close">닫기</button>
+      <button class="btn btn-danger">닫기</button>
     </div>
   </div>
+  <button class="BTN">버튼</button>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
   <script>
 
     $('.BTN').on('click', function(){
-      $('.white-bg').fadeToggle('show');
+      $('.black-bg').addClass('show');
     });
+
+    $('.btn').on('click', function(){
+      $('.black-bg').removeClass('show');
+    })
 
     // $('.btn').on('click', function(){
     //   $('.white-bg').fadeOut();
@@ -55,6 +64,12 @@
 
     // $('.btn').toggleClass('.white-bg')
   </script>
+
+<script 
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+crossorigin="anonymous">
+</script>
 
 </body>
 </html>
