--- a/assignment_5.html
+++ b/assignment_5.html
@@ -1,52 +1,106 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assignment_5.css">
-  <title>Assignment_5-1</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <title>Document</title>
+  <style>
+    .black-bg {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 5;
+      padding: 30px;
+      display: none;
+    }
+
+    .white-bg {
+      background: white;
+      border-radius: 5px;
+      padding: 30px;
+      width: 100%;
+      height: 100%;
+    }
+
+    .show {
+      display: block;
+    }
+    .pw{
+      display: none;
+    }
+  </style>
 </head>
+
 <body>
-  <div class="nav-list">
-    <ul>
-      <li>Cras justo odio</li>
-      <li>Dapibus ac facilisis in</li>
-      <li>Morbi leo risus</li>
-    </ul>
-  </div>
-
-  <hr>
-
-  <div class="alert-box">
-    <div class="green-box">
-      <p>Well done! You successfully read this important alert message.</p>
-    </div>
-    <div class="skyblue-box">
-      <p>Heads up! This alert needs your attention, but it's not super important.</p>
-    </div>
-    <div class="orange-box">
-      <p>Warning! Better check yourself, you're not looking too good.</p>
+  <div class="black-bg">
+    <div class="white-bg">
+      <h4>로그인하세요</h4>
+      <form action="../../success.html">
+        <div class="my-3">
+          <input type="text" id="userid" class="form-control">
+        </div>
+        <div class="my-3">
+          <input type="password" id="userpw" class="form-control" >
+        </div>
+        <p class="pw">아직 6자 미만입니다.</p>
+        <button type="submit" id="send" class="btn btn-primary">전송</button>
+        <!-- <button id="send" class="btn btn-primary">전송</button> -->
+        <button type="button" class="btn btn-danger close">닫기</button>
+      </form>
     </div>
   </div>
+  <button class="BTN">버튼</button>
 
-  <hr>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-  <div class="row">
-    <div class="col-6">1 0f 2</div>
-    <div class="col-6">2 of 2</div>
-  </div>
-  <div class="row">
-    <div class="col-4">1 of 3</div>
-    <div class="col-4">2 of 3</div>
-    <div class="col-4">3 of 3</div>
-  </div>
-  <div class="row">
-    <div class="col-3">1 of 4</div>
-    <div class="col-3">2 of 4</div>
-    <div class="col-3">3 of 4</div>
-    <div class="col-3">4 of 4</div>
-  </div>
-  
+  <script 
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+  crossorigin="anonymous">
+  </script>
+
+<!-- 폼 전송시 유저가 입력한 비번에 영어 대문자가 적어도 1개 있는지 검사해봅시다. -->
+  <script>
+    $('#send').on('click', function(e){
+      var u_id = document.querySelector('#userid');
+      var u_pw = document.querySelector('#userpw');
+
+      if(u_id.value == ''){
+        alert('아이디를 입력하시오');
+        e.preventDefault();
+        // document.querySelector('#send').type = 'reset';
+      }
+      else if(u_pw.value == ''){
+        alert('비밀번호를 입력하시오');
+        e.preventDefault();
+      }
+      else if(u_pw.value.length < 6){
+        alert('비밀번호는 6자 이상 가능합니다.');
+        e.preventDefault();
+      }
+      else if(/[A-Z]/.test(u_pw.value) != 1){
+        alert('대문자를 적어도 1개 이상 포함해야 함.');
+        e.preventDefault();
+      }
+      else{
+        document.querySelector('#send').type = 'submit';
+      }
+    })
+    
+
+    $('.BTN').on('click', function () {
+      $('.black-bg').addClass('show');
+    });
+
+    $('.close').on('click', function () {
+      $('.black-bg').removeClass('show');
+    })
+  </script>
+
 </body>
+
 </html>
