--- a/event-bubbling_upgrade.html
+++ b/event-bubbling_upgrade.html
@@ -48,11 +48,11 @@
 <body>
   <div class="container mt-5">
     <ul class="list">
-      <li class="tab-button">Products</li>
-      <li class="tab-button">Information</li>
-      <li class="tab-button">Shipping</li>
-      <li class="tab-button">new</li>
-      <li class="tab-button">newthing</li>
+      <li class="tab-button" data-id="0">Products</li>
+      <li class="tab-button" data-id="1">Information</li>
+      <li class="tab-button" data-id="2">Shipping</li>
+      <li class="tab-button" data-id="3">new</li>
+      <li class="tab-button" data-id="4">newthing</li>
     </ul>
     <div class="tab-content">
       <p>상품설명입니다. Product</p>
@@ -79,8 +79,8 @@
   </script>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="./for.js"></script>
-  
+  <script src="./event-bubbling_upgrade.js"></script>
+
   
 </body>
 </html>
