--- a/practice.html
+++ b/practice.html
@@ -1,58 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <title>Document</title>
   <style>
-    .hi{
-      display: none;
-    }
-    .show{
-      display: block;
-    }
+
   </style>
 </head>
+
 <body>
-  <form action="">
-    <fieldset>
-      <legend>입력하시오</legend>
-      <div>
-        <label for="id">아이디</label>
-        <input type="text" id="id" required>
-      </div>
-      <div>
-        <label for="pw">비밀번호</label>
-        <input type="password" id="pw">
-      </div>
-      <button type="submit">버튼</button>
+  <div id="test">
+  </div>
+  
 
-    </fieldset>
-  </form>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+  </script>
 
+  <script>
+    var arr = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    var a = arr.filter(function(inp){
+      return inp > 5;
+    });
+    console.log(a);
 
+    // var a = document.createElement('p');
+    // a.innerHTML = 'hi';
+    // document.querySelector('#test').appendChild(a);
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  </script>
 </body>
+
 </html>
